syntax="proto3";
import "google/protobuf/timestamp.proto";
option go_package = "./";


message SingleRequest{
  string id = 1;
}

message Todo {
  string ID = 1;
  string Title = 2;
  string Description = 3;
  string Status = 4;
  google.protobuf.Timestamp CreatAt = 5;
}

message TodoResponse {
  repeated Todo todos = 1;
}

service TodoHandler{
  rpc GetTodoDelivery (SingleRequest) returns (TodoResponse) {};
}

